--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
  </header>
  <section>
  <h2>Over Mij</h2>
- <p>Vertel iets over jezelf, zoals je naam, leeftijd, hobby's, en interesses.</p>
+ <p>ik ben jelle ik ben 13 jaar oud.</p>
  </section>
  <section>
  <h2>Mijn Favoriete Vakken</h2>
  <ul>
- <li>Eerste favoriete vak</li>
+ <li>engels cambridge course </li>
  <li>Tweede favoriete vak</li>
  <li>Derde favoriete vak</li>
  </ul>
