--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
  </header>
  <section>
  <h2>Over Mij</h2>
- <p>ik ben jelle ik ben 13 jaar oud.</p>
+ <p>ik ben jelle ik ben 13 jaar oud. ik zit op korfbal en daar ben ik (vind ik zelf) best goed in. Ik hou van mij 3 kittens, mijn moeder, mijn 2 broers, mijn vader, de vriendin van mijn vader (ouders zijn gescheiden)..</p>
  </section>
  <section>
  <h2>Mijn Favoriete Vakken</h2>
  <ul>
  <li>engels cambridge course </li>
- <li>Tweede favoriete vak</li>
- <li>Derde favoriete vak</li>
+ <li>LO</li>
+ <li>wi</li>
  </ul>
  </section>
  <section>
  <h2>Mijn Hobby's</h2>
  <ol>
- <li>Eerste hobby</li>
- <li>Tweede hobby</li>
- <li>Derde hobby</li>
+ <li>Gamen</li>
+ <li>Slapen</li>
+ <li>korfbal</li>
  </ol>
  </section>
  <footer>
  <p>Contactgegevens: <a 
-href="mailto:je@emailadres@example.com">je@emailadres@example.com</a></p>
+href="mailto:jelle.uijtewaal@hvc.nl">jelle.uijtewaal@hvc.nlz</a></p>
  </footer>
 </body>
 </html>
