--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <li>Gamen</li>
  <li>Slapen</li>
  <li>korfbal</li>
-    <img src="kb.jpg.jpg" alt="korfbal">
+    <img src="kb.jpg.jpg" alt="kb">
  </ol>
  </section>
  <footer>
