--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <li>korfbal</li>
  </ol>
  <img src="kb.jpg.jpg" alt="kb">
-versie 1.0 
+versie 1.0 kaas
  </section>
  <footer>
  <p>Contactgegevens: <a 
