--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <li>Slapen</li>
  <li>korfbal</li>
  </ol>
- <img src="kb.jpg.jpg" alt="kb">
+ <img src="kb.jpg" alt="kb">
 versie 1.0 kaas
  </section>
  <footer>
