--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  <h2>Mijn Favoriete Vakken</h2>
  <ul>
  <li>engels cambridge course </li>
+  <img src="londen.jfif" alt="londen">
  <li>LO</li>
  <li>wi</li>
  </ul>
