--- a/index.html
+++ b/index.html
@@ -35,4 +35,10 @@
 href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVWkJBAh3fOAs0EAAYASAAEgItR_D_BwE">jelle.uijtewaal@hvc.nl</a></p>
  </footer>
 </body>
+ <nav>
+ <ul>
+ <li><a href="index.html">Home</a></li>
+ <li><a href="pagina2.html">Pagina 2</a></li>
+ </ul>
+</nav>
 </html>
