--- a/pagina2.html
+++ b/pagina2.html
@@ -80,7 +80,7 @@ href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVW
  <nav>
  <ul>
  <li><a href="pagina2.html">Home</a></li>
- <li><a href="">Pagina 2</a></li>
+ <li><a href="index.htm">Pagina 2</a></li>
  </ul>
 </nav>
 </html>
