--- a/pagina2.html
+++ b/pagina2.html
@@ -76,5 +76,12 @@ href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVW
  <p>Contactgegevens: <a 
 href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVWkJBAh3fOAs0EAAYASAAEgItR_D_BwE">jelle.uijtewaal@hvc.nl</a></p>
  </footer>
+ <nav>
+ <ul>
+ <li><a href="index.html">Home</a></li>
+ <li><a href="pagina2.html">Pagina 2</a></li>
+ </ul>
+</nav>
+
 </body>
 </html>
