--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
  <h2>Mijn Favoriete Vakken</h2>
  <ul>
  <li>engels cambridge course </li>
-  2.0
   <img src="londen.jfif" alt="londen">
  <li>LO</li>
  <li>wi</li>
@@ -30,15 +29,15 @@
  </ol>
  <img src="kb.jpg" alt="kb">
  </section>
+ versie 1.0
  <footer>
  <p>Contactgegevens: <a 
 href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVWkJBAh3fOAs0EAAYASAAEgItR_D_BwE">jelle.uijtewaal@hvc.nl</a></p>
  </footer>
 </body>
- <nav>
- <ul>
- <li><a href="index.html">Home</a></li>
- <li><a href="pagina2.html">Pagina 2</a></li>
- </ul>
+<nav>
+<ul>
+<li><a href="pagina2.html">good</a></li>
+</ul>
 </nav>
 </html>
