--- a/pagina2.html
+++ b/pagina2.html
@@ -1,4 +1,4 @@
-OCTYPE html>
+<!OCTYPE html>
 <html>
 <head>
  <title>Mijn Persoonlijke Webpagina</title>
@@ -40,48 +40,10 @@ OCTYPE html>
 href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVWkJBAh3fOAs0EAAYASAAEgItR_D_BwE">jelle.uijtewaal@hvc.nl</a></p>
  </footer>
 </body>
- <!DOCTYPE html>
-<html>
-<head>
- <title>Mijn Persoonlijke Webpagina</title>
-</head>
-<body>
- <header>
- <h1>Mijn Persoonlijke Webpagina</h1>
- </header>
- <section>
- <h2>Over Mij</h2>
- <p>ik ben jelle ik ben 13 jaar oud. ik zit op korfbal en daar ben ik (vind ik zelf) best goed in. Ik hou van mij 3 kittens, mijn moeder, mijn 2 broers, mijn vader, de vriendin van mijn vader (ouders zijn gescheiden)..</p>
- </section>
- <section>
- <h2>Mijn Favoriete Vakken</h2>
- <ul>
- <li>engels cambridge course </li>
-  2.0
-  <img src="londen.jfif" alt="londen">
- <li>LO</li>
- <li>wi</li>
- </ul>
- </section>
- <section>
- <h2>Mijn Hobby's</h2>
- <ol>
- <li>Gamen</li>
- <li>Slapen</li>
- <li>korfbal</li>
- </ol>
- <img src="kb.jpg" alt="kb">
- </section>
- <footer>
- <p>Contactgegevens: <a 
-href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVWkJBAh3fOAs0EAAYASAAEgItR_D_BwE">jelle.uijtewaal@hvc.nl</a></p>
- </footer>
- <nav>
- <ul>
- <li><a href="index.html">Home</a></li>
- <li><a href="pagina2.html">Pagina 2</a></li>
- </ul>
+<nav>
+<ul>
+<li><a href="index.html">bad</a></li>
+</ul>
 </nav>
-
-</body>
+<!DOCTYPE>
 </html>
