--- a/pagina2.html
+++ b/pagina2.html
@@ -4,6 +4,15 @@
  <title>Mijn Persoonlijke Webpagina</title>
  <link rel="stylesheet" href=" styles.css">
 </head>
+<style>
+body {
+background-color:#39FF14;
+}    
+h1 {
+color: #00fefc;
+margin-left: 40px;
+}
+</style>
 <body>
  <header>
  <h1>Mijn Persoonlijke Webpagina</h1>
