--- a/pagina2.html
+++ b/pagina2.html
@@ -41,10 +41,8 @@ div {
 }
 
 @keyframes example {
-  0%   {background-color: red;}
-  25%  {background-color: yellow;}
-  50%  {background-color: blue;}
-  100% {background-color: green;}
+  from {background-color: red;}
+  to {background-color: yellow;}
 }
 </style>
 </head>
