--- a/pagina2.html
+++ b/pagina2.html
@@ -104,9 +104,9 @@ div {
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <a href="index.html">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="index.html">good page</a>
+    <a href="#"></a>
+    <a href="#"></a>
   </div>
 </div>
 Right-aligned Dropdo
