--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ href="mailto:https://www.ufreegames.com/?utm=asd&gclid=EAIaIQobChMIj5LZ2dC2gQMVW
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <a href="pagina2.html">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="pagina2.html">bad page</a>
+    <a href="#"></a>
+    <a href="#"></a>
   </div>
 </div>
 Right-aligned Dropdo
