--- a/pagina2.html
+++ b/pagina2.html
@@ -104,7 +104,7 @@ div {
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <a href="index.html">good page</a>
+    <a href="index.html">bad page</a>
     <a href="#"></a>
     <a href="#"></a>
   </div>
